--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,4 @@
 services:
-  front:
-    image: node:latest
-    working_dir: /app
-    volumes:
-      - ./front:/app
-    ports:
-      - "8080:8080"
-    command: ["npx", "serve", ".", "-l", "8080"]
-
-  fastapi:
-    build:
-      context: ./back
-      dockerfile: Dockerfile
-    ports:
-      - "8000:8000"
-    volumes:
-      - ./back/src:/back
-    depends_on:
-      mysql:
-        condition: service_healthy
-    healthcheck:
-      test: ["CMD", "curl", "-fs", "http://localhost:8000/"]
-      interval: 10s
-      timeout: 5s
-      retries: 10
-      start_period: 3s
-
   mysql:
     image: mysql:latest
     volumes:
@@ -45,3 +18,65 @@ services:
       timeout: 5s
       retries: 10
       start_period: 30s
+
+  fastapi:
+    build:
+      context: ./back
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - ./back/src:/back
+    healthcheck:
+      test: [ "CMD", "curl", "-fs", "http://localhost:8000/" ]
+      interval: 10s
+      timeout: 5s
+      retries: 10
+      start_period: 3s
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+  front:
+    image: node:latest
+    working_dir: /app
+    volumes:
+      - ./front:/app
+    ports:
+      - "8080:8080"
+    command: ["npx", "serve", ".", "-l", "8080"]
+    healthcheck:
+      test: ["CMD", "curl", "-fs", "http://localhost:8080"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    depends_on:
+      fastapi:
+        condition: service_healthy
+
+  nginx:
+    image: nginx:1.27.1
+    ports:
+      - "80:80"
+    healthcheck:
+      test: [ "CMD", "curl", "-fs", "http://localhost" ]
+      interval: 10s
+      timeout: 5s
+      retries: 20
+      start_period: 3s
+    volumes:
+      - ./docker/nginx/config/dev_default.conf:/etc/nginx/conf.d/default.conf
+    depends_on:
+      front:
+        condition: service_healthy
+
+  tunnel:
+    restart: always
+    image: cloudflare/cloudflared
+    command: tunnel run
+    env_file:
+      - ./.env
+    depends_on:
+      nginx:
+        condition: service_healthy
